# rwwv-development

./: README.md  azure-pipelines-1.yml  azure-pipelines.yml  package-lock.json  package.json
backend/: .gitignore  database.db  docker-compose.yml  dockerfile  pyproject.toml  readme.md  requirements.txt
backend/app/: main.py
backend/app/common/: headers.py  response.py
backend/app/config/: cors.py  settings.py
backend/app/controller/: approver.py  auth.py  bu.py  budget.py  employee.py  month.py  position.py  status_budget.py
backend/app/logging/: logger.py
backend/app/model/: database.py  enum.py  tables.py
backend/app/resource/: approver.py  auth.py  bu.py  budget.py  employee.py  month.py  position.py  status_budget.py
backend/app/schema/input/: approver.py  auth.py  bu.py  budget.py  employee.py  month.py  position.py  status_budget.py
backend/app/schema/input/common/: budget.py  headers.py
backend/app/schema/output/: approver.py  auth.py  bu.py  budget.py  employee.py  month.py  position.py  status_budget.py
backend/extra/: insert.sql  startup.sh
frontend/: .gitignore  package-lock.json  package.json  readme.md
frontend/app/: .env  dockerfile 2  package-lock.json  package.json  vue.config.js
frontend/app/config/: index.js
frontend/app/public/: index.html
frontend/app/src/: App.vue  main.js
frontend/app/src/components/: AlertMessage.vue  DefaultButton.vue  DefaultTable.vue  DefaultTitle.vue  Footer.vue  Money.vue  Navbar.vue  NotAccessable 2.vue
frontend/app/src/js/: checkLogin.js  login.js  redirectLogin.js
(+14 files in other folders)
