[tool.poetry]
name = "rwwv-development"
version = "0.1.0"
description = ""
authors = ["carlos-rian <65134623+carlos-rian@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
