[tool.poetry]
name = "rwwv-development"
version = "0.1.0"
description = ""
authors = ["carlos-rian <65134623+carlos-rian@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"
psycopg2-binary = "^2.9.1"
databases = {version = "^0.4.3", extras = ["postgresql"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
pylint = "^2.9.6"
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"